fix navbar view on smaller screens

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3518,14 +3518,26 @@ body.is-preload #header.alt .logo {
 	font-size: 0.9em;
 }
 
-@media screen and (max-width: 200px) {
+@media screen and (max-width: 480px) {
 
 	#nav {
-		display: none;
+		max-width: calc(100% - 2em);
 	}
 
 	#nav+#main {
-		padding-top: 0;
+		padding-top: 6.25em;
+	}
+
+}
+
+@media screen and (max-width: 360px) {
+
+	#nav {
+		max-width: 100%;
+	}
+
+	#nav+#main {
+		padding-top: 8.25em;
 	}
 
 }
